# murbo

./: .env.example  .gitattributes  .gitignore  README.md  murdoku-book-club-guide.md  pyproject.toml  stripped-game-guide.md
.claude/: settings.json
scripts/: pdf_to_png.py  sed_replace.py  whiteout_corners.py
src/murbo/: __init__.py  __main__.py  cli.py  env.py  extract.py  manifest.py  providers.py  schema.py  serve.py  solver.py
src/murbo/prompts/: extract_guide.md
tests/: conftest.py  test_env.py  test_example_puzzles.py  test_extract.py  test_schema.py  test_solver.py
tests/fixtures/puzzles/: car-repair.json
web/: index.html
web/css/: styles.css
web/js/: app.js  avatar.js  gallery.js  game.js  icons.js  puzzles.js
web/puzzles/: manifest.json  the-hiking-trip.json
