[project]
name = "murbo"
version = "0.1.0"
description = "Murbo — murder-mystery × Sudoku puzzle extraction pipeline and native web game"
authors = [{ name = "Penacillin", email = "pentracillin@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "jsonschema>=4.21",
]

[project.optional-dependencies]
# Vision providers are optional: install only what you need.
claude = ["anthropic>=0.40"]
minimax = ["anthropic>=0.40"]  # MiniMax speaks the Anthropic Messages API
openai = ["openai>=1.40"]
extract = ["anthropic>=0.40", "openai>=1.40", "pillow>=10.0"]

[project.scripts]
murbo = "murbo.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/murbo"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
